--- a/core/templates/core/packages.html
+++ b/core/templates/core/packages.html
@@ -13,21 +13,21 @@
     <div class="grid grid-cols-4 gap-4">
         {% for package in packages %}
         <div>
-            <a href="{% url 'deposit' %}">
+            <a>
                 <!-- <div>
                     <i class="fa-solid fa-cart-shopping"></i>
                     
                 </div> -->
 
                 <div class="p-6 bg-emerald-600 rounded-b-xl">
-                    <h2 class="text-white text-2xl text-align: center;">{{ package.name }}</h2>
-                    <i class="fa-sharp fa-solid fa-sack-dollar"></i>
-                    <h3>{{ package.description }}</h3>
+                    <h2 class="text-decoration-line: underline; text-white font-extrabold text-3xl text-align: center;">{{ package.name }}</h2><hr>
+                    <center><i class="fa-sharp fa-solid fa-sack-dollar"></i></center>
+                    <h3 class="text-black font-extrabold text-lg">{{ package.description }}</h3>
 
                     <p class="text-white">${{ package.price }}0</p>
                 </div>
                 
-                <a href="{% url 'core:deposit' %}" class="px-24 py-2 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700 text-center items-center">Activate</a>
+                <center><a href="{% url 'core:deposit' %}" class="px-24 py-2 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700 text-center items-center">Activate</a></center>
 
 
 
