--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -26,13 +26,19 @@
         <div class="form-row">
             <div class="col-md-5">
                 <div class="form-group">
-                    <label class="small mb-1">Username:</label>
+                    <label class="small mb-1">Username :</label>
                         {{ user_form.username }}
-                    <label class="small mb-1">Email:</label>
+                    <label class="small mb-1">Email :</label>
                         {{ user_form.email }}
+                    <label class="small mb-1">First Name :</label>
+                        {{ user_form.first_name }}
+                    <label class="small mb-1">Last Name :</label>
+                        {{ user_form.last_name }}
+
+                    
                 </div>
                 <div class="form-group">
-                    <a href="#">Change Password</a>
+                    <!-- <a href="#">Change Password</a> -->
                     <hr>
                     {% if profile_form.avatar %}
                     <label class="small mb-1">Change Avatar:</label>
@@ -46,8 +52,8 @@
             </div>
         </div>
         <br><br>
-        <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
-        <button type="reset" class="btn btn-dark btn-lg">Reset</button>
+        <button type="submit" class=" py-2 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Save Changes</button>
+        <a href="{% url 'core:password_reset' %}">Reset Password</a>
     </form>
 </div>
 
