--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -58,6 +58,13 @@
         <br>
 
         <div class="mb-3">
+            <label class="inline-block mb-2">Phone</label><br>
+            {{ form.phone }}
+        </div>
+        <br>
+
+
+        <div class="mb-3">
             <label for="country" class="w-full py-4 px-4 px-6 rounded-xl bg-blue-200">Country</label><span style="color: red !important; display: inline; float: none;">*</span>      
         
             <select id="country" name="country" class="form-control">
@@ -322,7 +329,10 @@
 
         <button class="submit py-2 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Signup</button><br>
 
-        <br><a href="{% url 'core:login' %}">Already have an account?</a>
+        <br><a href="{% url 'core:login' %}">Already have an account?  |</a>
+        
+        <a href="{% url 'core:password_reset' %}">Forgotten Password</a>
+
 
         <div class="g-recaptcha" data-sitekey="6Lfs9e0kAAAAAIrKrCt61137VD-KgT2C6Bjapp2N"></div>
         <button class="g-recaptcha" data-sitekey="6Lfs9e0kAAAAAIrKrCt61137VD-KgT2C6Bjapp2N" data-callback='onSubmit'data-action='submit'>Submit</button>    
